# orb

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
api/: Gemfile
api/app/controllers/: application_controller.rb
api/app/models/: ai_usage_log.rb  api_session.rb  audit_log.rb  check_in.rb  data_deletion_request.rb  data_export_request.rb  domain_event.rb  energetic_profile.rb  energy.rb  event.rb  intervention.rb  organization.rb  organization_membership.rb  permission.rb  plan_entitlement.rb  suggestion.rb  task.rb  user.rb
api/app/policies/: api_session_policy.rb  application_policy.rb  check_in_policy.rb  data_deletion_request_policy.rb  data_export_request_policy.rb  energetic_profile_policy.rb  energy_policy.rb  intervention_policy.rb  neurodivergence_use_policy.rb  plan_entitlement_policy.rb  suggestion_policy.rb
api/config/: application.rb  database.yml  routes.rb
api/config/environments/: development.rb  production.rb  test.rb
api/config/initializers/: filter_parameter_logging.rb  solid_queue.rb
api/db/: schema.rb
api/db/migrate/: 20260614000000_create_foundation_tables.rb  (+1 more)
api/spec/: rails_helper.rb
api/spec/models/: energetic_profile_spec.rb
apps/ml-worker/: pyproject.toml
apps/ml-worker/src/orb_ml_worker/: main.py
apps/web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
tests/: README.md  TODO.md  run.sh
tests/lib/: assertions.sh
tests/specs/: 00_test_infrastructure.sh  10_phase_0_foundation.sh  20_mvp_internal.sh  30_beta_private.sh  40_v1_public.sh  50_cross_cutting_contracts.sh
(+68 files in other folders)
